--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 				</ul> -->
 
-		<section id="video.mp4">
+		<section id="video">
 			<video autoplay muted loop playsinline>
 
 			</video>
