--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 			</video>
 			<div class="content">
-				<p>ENJOY THE SILENCE - Music Video</p>
-				<a href="https://youtu.be/mj-bhuq7-AY?si=mVVlK3W9etK6IJGM" target="_blank" class="button fit">Watch</a>
+				<p>ASTRONAUT - Music Video</p>
+				<a href="https://www.youtube.com/watch?v=fA0DlPxL8lM" target="_blank" class="button fit">Watch</a>
 						</div>
 			
 	</section>
@@ -139,8 +139,8 @@
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content desktop">
-				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The quartet from Düsseldorf, Germany, combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
-					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and five music videos.</p>
+				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
+					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and four music videos.</p>
 
 				<table>
 					<tr>
@@ -172,8 +172,8 @@
 						<td>Guitars</td>				
 					</tr>
 				</table>
-				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The quartet from Düsseldorf, Germany, combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
-					In the past 3 years, the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and five music videos.</p>
+				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
+					In the past 3 years, the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and four music videos.</p>
 			</div>
 
 		</section>
@@ -185,9 +185,14 @@
 			<table>
 				<tbody>
 					<tr>
-						<td class="text-right">Ratinger Hof</td>
-						<td>24.01.2026</td>
-						<td class="text-left">Düsseldorf</td>
+						<td class="text-right">Surrogate Festival</td>
+						<td>02.08.2025</td>
+						<td class="text-left">Kranenburg</td>
+					</tr>
+					<tr>
+						<td class="text-right">Parkhaus</td>
+						<td>26.09.2025</td>
+						<td class="text-left">Duisburg</td>
 					</tr>
 					<tr>
 						<td class="text-right">EMO</td>
