--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“LIFE NOIR” - The New Album. Out Now!</p>
+				<p id="announcement">“LIFE NOIR” – The New Album. Out Now!</p>
 				<a href="https://song.link/lifenoir" target="_blank" class="button fit">Listen now</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
@@ -76,7 +76,7 @@
 
 			</video>
 			<div class="content">
-				<p>ENJOY THE SILENCE - Music Video</p>
+				<p>ENJOY THE SILENCE – Music Video</p>
 				<a href="https://youtu.be/mj-bhuq7-AY?si=mVVlK3W9etK6IJGM" target="_blank" class="button fit">Watch</a>
 						</div>
 			
@@ -139,7 +139,7 @@
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content desktop">
-				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
+				<p>A Symbiosis of Tradition and Modernity in Metal – MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
 					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and five music videos.</p>
 
 				<table>
@@ -172,7 +172,7 @@
 						<td>Guitars</td>				
 					</tr>
 				</table>
-				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
+				<p>A Symbiosis of Tradition and Modernity in Metal – MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
 					In the past 3 years, the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and five music videos.</p>
 			</div>
 
